--- a/Local-Pizza/Resources/Info.plist
+++ b/Local-Pizza/Resources/Info.plist
@@ -21,5 +21,14 @@
 			</array>
 		</dict>
 	</dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>app-1-813204608109-ios-7491f2dd637241aaf91b64</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
